# michat

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  input-2.txt  input-3.txt  input.txt  pyproject.toml  requirements.txt  setup.cfg  speak.py  system-emotion.txt  system-ene.txt  system-miku.txt  system-zundamon.txt  system.txt
docker/: Dockerfile  Dockerfile.macosx
example/input/: input.txt
michat/: __main__.py  app.py  michat.py  recorder.py  speaker.py  transcript.py
michat/lib/speak/: __init__.py  speak.py
michat/lib/transcript/: __init__.py  __main__.py  transcriber.py  transcript.py
michat/speak/: __init__.py  speak.py
michat/transcript/: transcriber.py  transcript.py
speak/: __main__.py
system/: system-ene.txt  system-miku.txt  system-zundamon.txt
tests/: test_speaker_chatgpt.py
transcript/: transcriber.py
