[project]
name = "michat"
description = "talk with ChatGPT"
requires-python = ">=3.8"
readme = "README.md"

[tool.poetry]
name = "michat-poetry"
version = "1.0.0"
description = "talk with ChatGPT"
authors = ["obata-k <obata-k@kadoakwa.jp>"]

[tool.poetry.dependencies]
python = "~3.10"
fastapi = "~0"
uvicorn = {extras = ["standard"], version = "~0"}
openai = "^0.27.6"
playsound = "^1.3.0"
voicevox_core = { path = "voicevox_core-0.14.2+cpu-cp38-abi3-macosx_11_0_arm64.whl" }
numpy = "^1.24.3"
pyobjc = "^9.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3"
flake8 = "^6.0"
mypy = "^1.2"
black = "^23.3"
isort = "^5.12"
# 命名規則をチェックしてくれるflake8のプラグイン
# cf. https://pypi.org/project/pep8-naming/
pep8-naming = "~0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# スタブファイルがないライブラリの型チェックをしない
# cf. https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-imports
[[tool.mypy.overrides]]
module = [
    "pytest.*"
]
ignore_missing_imports = true

# Blackとコンフリクトしないための設定
# cf. https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
[tool.isort]
profile = "black"
